# ChatGPT-Powered-Knowledge-Base-Indexer

./: README.md  faiss_index.index  pyproject.toml  text_chunks.txt  urls.txt
data/: Cache - COMP15212 Wiki.txt  Caching - COMP15212 Wiki.txt  Memory - COMP15212 Wiki.txt  Memory Management - COMP15212 Wiki.txt  Memory Management Unit (MMU) - COMP15212 Wiki.txt  Memory Mapping - COMP15212 Wiki.txt  Memory Protection - COMP15212 Wiki.txt  Memory Segmentation - COMP15212 Wiki.txt  Memory Sizes - COMP15212 Wiki.txt  Paging - COMP15212 Wiki.txt  Translation Look-aside Buffer (TLB) - COMP15212 Wiki.txt  Virtual Memory - COMP15212 Wiki.txt
src/kbiproject/: app.py  crawler.py  embedding.py  rag_core.py  rag_query.py
src/kbiproject/static/: style.css
src/kbiproject/templates/: chat.html
